# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  flake.nix  pyproject.toml
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
