[project]
name = "mcp-obs"
version = "0.1.0"
description = "Observability MCP server for VictoriaLogs and VictoriaTraces"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]

[project.scripts]
mcp-obs = "mcp_obs.server:main"
